--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 <head>
 
 <meta charset="utf-8">
-<title>{% if page.title %}{{ page.title }} &rsaquo; {% endif %}Evan Hahn (dot com)</title>
+<title>{% if page.title %}{{ page.title }} &rsaquo; {% endif %}Shi Min (dot com)</title>
 <link rel="stylesheet" href="/res/the.css">
 <link rel="shortcut icon" href="/favicon.ico">
 <meta name="viewport" content="width=device-width">
