complete my first blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 <head>
 
 <meta charset="utf-8">
-<title>{% if page.title %}{{ page.title }} &rsaquo; {% endif %}Shi Min (dot com)</title>
+<title>{% if page.title %}{{ page.title }} &rsaquo; {% endif %}Shi Min</title>
 <link rel="stylesheet" href="/res/the.css">
 <link rel="shortcut icon" href="/favicon.ico">
 <meta name="viewport" content="width=device-width">
@@ -39,7 +39,7 @@
 <div class="site-content" role="main">{{ content }}</div>
 
 <footer>
-Email me at <a href="mailto:me@evanhahn.com">me@evanhahn.com</a>.
+Email me at <a href="mailto:shimin111@outlook.com">shimin111@outlook.com</a>.
 
 All content licensed under the <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution License</a> unless noted otherwise. All code is free-license under the <a href="http://unlicense.org/">Unlicense</a> unless noted otherwise. Unless noted, my content doesn't necessarily reflect any employer's view.
 
