--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
   {% if page.previous %}
   <div>
     <a href="{{ page.previous.url }}" class="previous">
-      Previous post: {{ page.previous.title }}
+      上一篇: {{ page.previous.title }}
     </a>
   </div>
   {% endif %}
@@ -16,7 +16,7 @@ layout: default
   {% if page.next %}
   <div>
     <a href="{{ page.next.url }}" class="next">
-      Next post: {{ page.next.title }}
+      下一篇: {{ page.next.title }}
     </a>
   </div>
   {% endif %}
