update again, the last one, direction is not right

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 <meta charset="utf-8">
 <title>{% if page.title %}{{ page.title }} &rsaquo; {% endif %}Shi Min</title>
 <link rel="stylesheet" href="/res/the.css">
-<link rel="shortcut icon" href="/favicon.ico">
+<link rel="shortcut icon" href="/my-website2.ico">
 <meta name="viewport" content="width=device-width">
 <link rel="alternate" type="application/rss+xml" title="Feed" href="{{ site.url }}/feed.xml">
 <!--[if lt IE 9]>
@@ -23,7 +23,7 @@
 <header class="site-header">
 
   <h1><a href="/" class="logo">
-    <img src="/res/logo_white.gif" alt="Evan Hahn (dot com)">
+    <img src="/res/my-website-log3.gif" alt="shimin111.github.io">
   </a></h1>
 
   <div class="description">{{ site.description }}</div>
