change the footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 <footer>
 Email me at <a href="mailto:shimin111@outlook.com">shimin111@outlook.com</a>.
 
-All content licensed under the <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution License</a> unless noted otherwise. All code is free-license under the <a href="http://unlicense.org/">Unlicense</a> unless noted otherwise. Unless noted, my content doesn't necessarily reflect any employer's view.
+All content licensed under the <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution License</a> unless noted otherwise. All code is free-license under the <a href="http://unlicense.org/">Unlicense</a>
 
 Please come back soon!
 </footer>
