--- a/_includes/outline.html
+++ b/_includes/outline.html
@@ -1,9 +1,9 @@
-<article role="article" itemscope itemtype="http://schema.org/BlogPosting">
-
+<div class="catalog">
   <header>
-    <h1 itemprop="name">{{ page.title }}</h1>
-      <a href="{{ page.url }}"><time itemprop="dateCreated" datetime="{{ page.date | date: "%Y-%m-%d" }}">
+    <h1 itemprop="name"><a href="{{ page.url }}">{{ page.title }}</a></h1>
+      <time itemprop="dateCreated" datetime="{{ page.date | date: "%Y-%m-%d" }}">
         {{ page.date | date: "%-d %B %Y" }}
-      </time></a>
+      </time>
   </header>
-</article>
+</div>
+
