--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 <div class="site-content" role="main">{{ content }}</div>
 
 <footer>
-Email me at <a href="mailto:shminjs@outlook.com">shimin111@outlook.com</a>.
+Email me at <a href="mailto:shminjs@outlook.com">shminjs@outlook.com</a>.
 
 All content licensed under the <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution License</a> unless noted otherwise. All code is free-license under the <a href="http://unlicense.org/">Unlicense</a>
 </footer>
