--- a/css/main.css
+++ b/css/main.css
@@ -1694,7 +1694,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #d0ffd6;
+  background: #6e3499;
 }
 .links-of-blogroll {
   font-size: 13px;
