--- a/css/main.css
+++ b/css/main.css
@@ -1694,7 +1694,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ffffe9;
+  background: #a8452a;
 }
 .links-of-blogroll {
   font-size: 13px;
